[gd_scene load_steps=3 format=3 uid="uid://cgmbwdj4sos4b"]

[ext_resource type="PackedScene" uid="uid://cy8mv0w373sev" path="res://Assets/kenney_blaster-kit_2.1/Models/FBX format/blaster-o.fbx" id="1_004fk"]
[ext_resource type="Script" uid="uid://db5bbj1rwt57e" path="res://Scripts/Weapons/WeaponsScenes/blaster_o.gd" id="2_7yb40"]

[node name="blaster-o" instance=ExtResource("1_004fk")]
script = ExtResource("2_7yb40")

[node name="blaster-o" parent="." index="0"]
transform = Transform3D(-2, 1.74846e-07, 7.64274e-15, 0, -8.74228e-08, 2, 1.74846e-07, 2, 8.74228e-08, 0, -0.078615, 0)

[node name="output1" type="Marker3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0725459, -0.468373, 0.072776)

[node name="output2" type="Marker3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0686612, -0.468756, 0.0731107)

[node name="output3" type="Marker3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0693078, -0.469004, -0.0669289)

[node name="output4" type="Marker3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0737061, -0.465374, -0.0699655)
